# secrit.py

./: .gitignore  Makefile  README.org  pyproject.toml
src/secrit/: __init__.py  main.py
